<resources>
    <string name="app_name">Exercise1NaorJonathan</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="registration_form">Registration Form</string>
    <string name="intent_email">email</string>
    <string name="intent_byReg">byReg</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="intent_newUser">NewUser</string>
    <string name="intent_uri">uri</string>


    <!-- Error   -->
    <string name="not_valid_email_format">Not valid email format</string>
    <string name="not_valid_password_format">Password  must be at least 6 letters long</string>
    <string name="not_valid_phone_format">Enter correct phone number</string>
    <string name="not_valid_age">Type correct age</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="user_images">userImages</string>

    <string name="search_photo">searchPhoto</string>
    <string name="container_frag">container</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_id">9xebvc9XEro15Zr2OyE9H1J80O-YS-B7l6RhSiZbzkc</string>

</resources>
